# abac-system

./: Dockerfile  README.md  compose.yaml  gunicorn.conf.py  multidict-6.0.4-cp312-cp312-macosx_10_9_universal2.whl  pyproject.toml
api/: main.py
api/common/: cache_manager.py  configs.py  db.py  exceptions.py  models.py  utils.py
api/curl-jsons/: attribute.json  patch_user_attribute.json  policy.json  resource.json  user.json
api/handlers/: attributes_handlers.py  is_authorized_handler.py  policies_handlers.py  resources_handlers.py  users_handlers.py
api/tests/: conftest.py  test_is_authorized.py  test_logic.py
images/: abac-system.drawio
redis/: redis.conf
