[tool.poetry]
name = "abac-system"
version = "0.1.0"
description = "ABAC System"
authors = ["ameenkh <ameen.khoury@gmail.com>"]
packages = [{include = "api"}]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.11"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.3"
aiohttp = "^3.9.1"
marshmallow = "^3.20.2"
redis = "^5.0.1"
pymongo = "^4.6.1"
gunicorn = "^21.2.0"
uvloop = "^0.19.0"
pytest-aiohttp = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
